--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_BASE_URL = https://your-api.com
+REACT_APP_API_BASE_URL = http://localhost:3000/
+GOOGLE_CLIENT_ID = 372755668749-oidp1sqfteorljl4tuvmsj80rf4kke2l.apps.googleusercontent.com
