--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,85 +1,98 @@
-adafruit-io==2.8.0
-asgiref==3.8.1
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
-certifi==2025.1.31
-charset-normalizer==3.4.1
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
-contourpy==1.3.0
-cycler==0.12.1
-debugpy @ file:///D:/bld/debugpy_1744321258630/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
-Django==4.2.19
-django-cors-headers==4.7.0
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.5.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
-facenet-pytorch==2.6.0
-filelock==3.18.0
-fonttools==4.56.0
-fsspec==2025.3.0
-idna==3.10
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
-importlib_resources==6.5.2
-ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
-ipython @ file:///D:/bld/ipython_1701831845989/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
-Jinja2==3.1.6
-joblib==1.4.2
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///D:/bld/jupyter_core_1727163532151/work
-kiwisolver==1.4.7
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
-mpmath==1.3.0
-mysqlclient==2.2.7
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
-networkx==3.2.1
-numpy==1.26.4
-openai-whisper==20240930
-opencv-python==4.11.0.86
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
-paho-mqtt==2.1.0
-pandas==2.2.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
-pillow==10.2.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1742485085/work
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1744724089886/work
-psutil @ file:///D:/bld/psutil_1740663155517/work
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
-py-cpuinfo==9.0.0
-PyAudio==0.2.14
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
-PyJWT==2.9.0
-pyparsing==3.2.3
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
-python-dotenv==1.0.1
-pytz==2025.2
-pywin32==307
-PyYAML==6.0.2
-pyzmq @ file:///D:/bld/pyzmq_1743831235197/work
-requests==2.32.3
-scikit-learn==1.6.1
-scipy==1.13.1
-seaborn==0.13.2
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
-sqlparse==0.5.3
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
-sympy==1.13.3
-threadpoolctl==3.6.0
-torch==2.2.2
-torchaudio==2.2.2
-torchvision==0.17.2
-tornado @ file:///D:/bld/tornado_1732615926917/work
-tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
-typing_extensions==4.12.2
-tzdata==2025.1
-ultralytics==8.3.98
-ultralytics-thop==2.0.14
-urllib3==2.3.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+openai-whisper 20240930
+Django 4.2.19
+MarkupSafe 3.0.2
+PyAudio 0.2.14
+PyJWT 2.9.0
+PyYAML 6.0.2
+adafruit-io 2.8.0
+asgiref 3.8.1
+asttokens 3.0.0
+certifi 2025.1.31
+charset-normalizer 3.4.1
+colorama 0.4.6
+comm 0.2.2
+contourpy 1.3.0
+cycler 0.12.1
+debugpy 1.8.14
+decorator 5.2.1
+django-cors-headers 4.7.0
+djangorestframework 3.15.2
+djangorestframework-simplejwt 5.5.0
+exceptiongroup 1.2.2
+executing 2.1.0
+facenet-pytorch 2.6.0
+filelock 3.18.0
+fonttools 4.56.0
+fsspec 2025.3.0
+idna 3.10
+importlib-metadata 8.6.1
+importlib-resources 6.5.2
+ipykernel 6.29.5
+ipython 8.18.1
+jedi 0.19.2
+jinja2 3.1.6
+joblib 1.4.2
+jupyter-client 8.6.3
+jupyter-core 5.7.2
+kiwisolver 1.4.7
+matplotlib 3.9.4
+matplotlib-inline 0.1.7
+mpmath 1.3.0
+mysqlclient 2.2.7
+nest-asyncio 1.6.0
+networkx 3.2.1
+numpy 1.26.4
+opencv-python 4.11.0.86
+packaging 24.2
+paho-mqtt 2.1.0
+pandas 2.2.3
+parso 0.8.4
+pickleshare 0.7.5
+pillow 10.2.0
+pip 25.0
+platformdirs 4.3.7
+prompt-toolkit 3.0.51
+psutil 7.0.0
+pure-eval 0.2.3
+py-cpuinfo 9.0.0
+pygments 2.19.1
+pyparsing 3.2.3
+python-dateutil 2.9.0.post0
+python-dotenv 1.0.1
+pytz 2025.2
+pywin32 307
+pyzmq 26.4.0
+requests 2.32.3
+scikit-learn 1.6.1
+scipy 1.13.1
+seaborn 0.13.2
+setuptools 75.8.0
+six 1.17.0
+sqlparse 0.5.3
+stack-data 0.6.3
+sympy 1.13.3
+threadpoolctl 3.6.0
+torch 2.2.2
+torchaudio 2.2.2
+torchvision 0.17.2
+tornado 6.4.2
+tqdm 4.67.1
+traitlets 5.14.3
+typing-extensions 4.12.2
+tzdata 2025.1
+ultralytics 8.3.98
+ultralytics-thop 2.0.14
+urllib3 2.3.0
+wcwidth 0.2.13
+wheel 0.45.1
+zipp 3.21.0
+autocommand 2.2.2
+backports.tarfile 1.2.0
+inflect 7.3.1
+jaraco.collections 5.1.0
+jaraco.context 5.3.0
+jaraco.functools 4.0.1
+jaraco.text 3.12.1
+more-itertools 10.3.0
+tomli 2.0.1
+typeguard 4.3.0
