--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "formik": "^2.4.6",
+    "jotai": "^2.12.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
